Creado mediante Colaboratory

--- a/ejercicios_for.ipynb
+++ b/ejercicios_for.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyON5ycNhLZbhsFWIz5UukA0",
+      "authorship_tag": "ABX9TyOfOZUhnqZ3P2BeQGIpRRWN",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -229,7 +229,9 @@
       "cell_type": "markdown",
       "source": [
         "# ejercicios \n",
-        "1. dada la siguiente lista de numeros ["
+        "1. dada la siguiente lista de numeros [20, 21, 30, 41, 50, 201]mostrar en patalla los que noterminan en 1.\n",
+        "2. mostrar 1000 veses en pantalla \"programamcion\"\n",
+        "3. del conjunto de cadenas [ \"E\", \"F\", \"M\", \"A\"] que corresponde a las iniciales de los primeros 4 meses del año\n"
       ],
       "metadata": {
         "id": "em9P7GZHGnQc"
